--- a/OsceManager/.project
+++ b/OsceManager/.project
@@ -41,6 +41,15 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
+			<name>org.eclipse.ajdt.core.ajbuilder</name>
+			<arguments>
+				<dictionary>
+					<key>aspectPath</key>
+					<value>org.springframework.aspects</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
