--- a/OsceManager/.settings/com.google.gdt.eclipse.core.prefs
+++ b/OsceManager/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Tue Dec 27 22:19:27 NOVT 2011
+#Tue Jan 03 17:34:58 CET 2012
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-lastWarOutDir=/home/lucky/sibers/osce/OsceManager/target/OsceManager-0.1.0.BUILD-SNAPSHOT
+lastWarOutDir=/home/nikotsunami/git/osce4/OsceManager/target/OsceManager-0.1.0.BUILD-SNAPSHOT
 launchConfigExternalUrlPrefix=
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=false
