--- a/OsceManager/src/main/resources/log4j.properties
+++ b/OsceManager/src/main/resources/log4j.properties
@@ -10,6 +10,17 @@ log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
+
+#log4j.logger.org.hibernate=INFO, hb
+#log4j.logger.org.hibernate.SQL=DEBUG
+#log4j.logger.org.hibernate.type=TRACE
+#log4j.logger.org.hibernate.hql.ast.AST=info
+#log4j.logger.org.hibernate.tool.hbm2ddl=warn
+#log4j.logger.org.hibernate.hql=debug
+#log4j.logger.org.hibernate.cache=info
+#log4j.logger.org.hibernate.jdbc=debug
+
+
 #log4j.logger.org.hibernate=INFO, hb
 #log4j.logger.org.hibernate.SQL=DEBUG
 #log4j.logger.org.hibernate.type=TRACE
