--- a/OsceManager/src/main/resources/log4j.properties
+++ b/OsceManager/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 #Updated at Tue Aug 30 11:29:49 CEST 2011
 #Tue Aug 30 11:29:49 CEST 2011
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 log4j.appender.R.File=application.log
 log4j.appender.R.MaxFileSize=100KB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
