--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -453,10 +453,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>UTF-8</encoding>
+                              <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -485,7 +487,7 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
                     <outxml>true</outxml>
                     <aspectLibraries>
                         <aspectLibrary>
@@ -495,36 +497,44 @@
                     </aspectLibraries>
                     <source>1.6</source>
                     <target>1.6</target>
+                                                  <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.5</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
                     <encoding>UTF-8</encoding>
+                                                  <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.8</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
                     <printSummary>false</printSummary>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <excludes>
                         <exclude>**/*_Roo_*</exclude>
                     </excludes>
+                                                  <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.1</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                                                  <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -538,7 +548,9 @@
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <version>2.7</version>
                 <!-- Note 2.8 does not work with AspectJ aspect path -->
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
+                                              <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                     <downloadSources>true</downloadSources>
                     <downloadJavadocs>false</downloadJavadocs>
                     <wtpversion>2.0</wtpversion>
@@ -568,7 +580,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-idea-plugin</artifactId>
                 <version>2.2</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
+                                              <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                     <downloadSources>true</downloadSources>
                     <dependenciesAsLibraries>true</dependenciesAsLibraries>
                 </configuration>
@@ -582,7 +596,9 @@
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>7.4.2.v20110526</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
+                                              <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                     <webAppSourceDirectory>${jetty.app.path}</webAppSourceDirectory>
                     <webAppConfig>
                         <contextPath>/${project.name}</contextPath>
@@ -594,13 +610,15 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>2.2.0</version>
-                <configuration>
+                <configuration> <argLine>-Xmx8196m</argLine>
+                                              <meminitial>2048m</meminitial>
+          <maxmem>8192m</maxmem>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/ApplicationScaffold.html</runTarget>
+                    <runTarget>/OsMaEntry.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.ApplicationScaffold</module>
+                        <module>${project.groupId}.OsMaEntry</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
