--- a/OsceManager/.settings/com.springsource.sts.roo.core.prefs
+++ b/OsceManager/.settings/com.springsource.sts.roo.core.prefs
@@ -1,4 +1,4 @@
-#Wed Sep 14 13:57:12 CEST 2011
-com.springsource.sts.roo.core.com.springsource.sts.roo.core.install.name=Roo 1.1.5.RELEASE
+#Tue Feb 21 12:10:45 CET 2012
+com.springsource.sts.roo.core.com.springsource.sts.roo.core.install.name=Roo 1.1.5.RELEASE [rev d3a68c3]
 com.springsource.sts.roo.core.use.default.install=true
 eclipse.preferences.version=1
