--- a/OsceManager/.settings/org.springframework.ide.eclipse.core.prefs
+++ b/OsceManager/.settings/org.springframework.ide.eclipse.core.prefs
@@ -1,8 +1,9 @@
-#Thu Sep 01 10:15:39 CEST 2011
+#Tue Feb 21 11:56:48 CET 2012
 eclipse.preferences.version=1
 org.springframework.ide.eclipse.core.builders.enable.aopreferencemodelbuilder=true
 org.springframework.ide.eclipse.core.builders.enable.beanmetadatabuilder=true
 org.springframework.ide.eclipse.core.builders.enable.com.springsource.sts.maven.core.dataNucleusEnhancerProjectBuilder=false
+org.springframework.ide.eclipse.core.builders.enable.com.springsource.sts.maven.core.dataNucleusEnhancerProjectBuilder.legacy=false
 org.springframework.ide.eclipse.core.builders.enable.osgibundleupdater=false
 org.springframework.ide.eclipse.core.enable.project.preferences=false
 org.springframework.ide.eclipse.core.validator.enable.com.springsource.sts.bestpractices.beansvalidator=false
