--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -40,6 +40,14 @@
             <url>http://maven.springframework.org/external</url>
             <name>SpringSource Maven Repository - External Releases</name>
         </repository>
+        
+            <repository>
+            <id>maven.repo</id>
+            <url>http://mvnrepository.com/artifact/</url>
+            <name>Testrepo for dependencies</name>
+        </repository>
+        
+        
 
     </repositories>
     <pluginRepositories>
@@ -453,12 +461,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>UTF-8</encoding>
-                              <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -487,7 +496,8 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration> <argLine>-Xmx8196m</argLine>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
                     <outxml>true</outxml>
                     <aspectLibraries>
                         <aspectLibrary>
@@ -497,44 +507,47 @@
                     </aspectLibraries>
                     <source>1.6</source>
                     <target>1.6</target>
-                                                  <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.5</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
                     <encoding>UTF-8</encoding>
-                                                  <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.8</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
                     <printSummary>false</printSummary>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <excludes>
                         <exclude>**/*_Roo_*</exclude>
                     </excludes>
-                                                  <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.1</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                                                  <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -548,9 +561,10 @@
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <version>2.7</version>
                 <!-- Note 2.8 does not work with AspectJ aspect path -->
-                <configuration> <argLine>-Xmx8196m</argLine>
-                                              <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                     <downloadSources>true</downloadSources>
                     <downloadJavadocs>false</downloadJavadocs>
                     <wtpversion>2.0</wtpversion>
@@ -580,9 +594,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-idea-plugin</artifactId>
                 <version>2.2</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
-                                              <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                     <downloadSources>true</downloadSources>
                     <dependenciesAsLibraries>true</dependenciesAsLibraries>
                 </configuration>
@@ -596,9 +611,10 @@
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>7.4.2.v20110526</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
-                                              <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                <configuration>
+                    <argLine>-Xmx8196m</argLine>
+                    <meminitial>2048m</meminitial>
+                    <maxmem>8192m</maxmem>
                     <webAppSourceDirectory>${jetty.app.path}</webAppSourceDirectory>
                     <webAppConfig>
                         <contextPath>/${project.name}</contextPath>
@@ -610,15 +626,13 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>2.2.0</version>
-                <configuration> <argLine>-Xmx8196m</argLine>
-                                              <meminitial>2048m</meminitial>
-          <maxmem>8192m</maxmem>
+                <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/OsMaEntry.html</runTarget>
+                    <runTarget>/ApplicationScaffold.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.OsMaEntry</module>
+                        <module>${project.groupId}.ApplicationScaffold</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
