--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -629,15 +629,12 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/OsMaEntry.html</runTarget>
+                    <runTarget>/ApplicationScaffold.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.OsMaEntry</module>
+                        <module>${project.groupId}.ApplicationScaffold</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
-                    <argLine>-Xmx8196m</argLine>
-                    <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
                 </configuration>
                 <executions>
                     <execution>
