--- a/OsceManager/.settings/com.springsource.sts.roo.core.prefs
+++ b/OsceManager/.settings/com.springsource.sts.roo.core.prefs
@@ -1,4 +1,3 @@
-#Wed Mar 07 13:09:54 CET 2012
 com.springsource.sts.roo.core.com.springsource.sts.roo.core.install.name=Roo 1.1.5.RELEASE [rev d3a68c3] (1)
-com.springsource.sts.roo.core.use.default.install=false
+com.springsource.sts.roo.core.use.default.install=true
 eclipse.preferences.version=1
