--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -90,6 +90,14 @@
 	             <scope>system</scope>
    			 <systemPath>${project.basedir}/lib/gwt-dnd-3.1.1.jar</systemPath>
         </dependency> 
+        <!-- Dependency for video upload -->
+        <dependency>
+			<groupId>fr.hd3d.html5.video</groupId>
+			<artifactId>video</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/fr.hd3d.html5.video.1.0.jar</systemPath>
+		</dependency>        
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
