Dependency for PDF jar is added.

--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -92,12 +92,27 @@
         </dependency> 
         <!-- Dependency for video upload -->
         <dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.2.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/PDF_LIB/itextpdf-5.2.1.jar</systemPath>
+		</dependency>      
+		<!-- Dependency for PDF Generation -->
+        <dependency>
+			<groupId>com.itextpdf.text</groupId>
+			<artifactId>itext-xtra</artifactId>
+			<version>5.2.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/PDF_LIB/itext-xtra-5.2.1.jar</systemPath>
+		</dependency>		
+        <dependency>
 			<groupId>fr.hd3d.html5.video</groupId>
 			<artifactId>video</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/fr.hd3d.html5.video.1.0.jar</systemPath>
-		</dependency>        
+		</dependency>  
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
