--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -47,7 +47,13 @@
             <name>Testrepo for dependencies</name>
         </repository>
         
-        
+        <repository>
+          <id>local-project-libraries</id>
+          <name>Local project libraries</name>
+          <url>file://${project.basedir}/lib</url>
+          <layout>default</layout>
+      </repository>
+      
 
     </repositories>
     <pluginRepositories>
@@ -76,43 +82,44 @@
     </pluginRepositories>
     <dependencies>
        <!-- myOwn dependencies for standard applications -->
+  <dependency>
+          <groupId>com.google.code.gwt-log</groupId>
+          <artifactId>gwt-log</artifactId>
+          <version>3.1.3</version>
+         <!--   <scope>system</scope>
+                <systemPath>${project.basedir}/lib/gwt-log-3.1.3.jar</systemPath> -->
+        </dependency>
         <dependency>
-		  <groupId>com.google.code.gwt-log</groupId>
-		  <artifactId>gwt-log</artifactId>
-		  <version>3.1.3</version>
-		  <scope>system</scope>
-   			 <systemPath>${project.basedir}/lib/gwt-log-3.1.3.jar</systemPath>
-		</dependency> 
-        <dependency>
-	            <groupId>com.google.code.gwt-dnd</groupId>
-	            <artifactId>gwt-dnd</artifactId>
-	            <version>3.1.1</version>
-	             <scope>system</scope>
-   			 <systemPath>${project.basedir}/lib/gwt-dnd-3.1.1.jar</systemPath>
-        </dependency> 
+                <groupId>com.google.code.gwt-dnd</groupId>
+                <artifactId>gwt-dnd</artifactId>
+                <version>3.1.1</version>
+            <!--        <scope>system</scope>
+                <systemPath>${project.basedir}/lib/gwt-dnd-3.1.1.jar</systemPath> -->
+        </dependency>
+       
         <!-- Dependency for video upload -->
         <dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.2.1</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/PDF_LIB/itextpdf-5.2.1.jar</systemPath>
-		</dependency>      
-		<!-- Dependency for PDF Generation -->
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.2.1</version>
+          <!--     <scope>system</scope>
+            <systemPath>${project.basedir}/lib/PDF_LIB/itextpdf-5.2.1.jar</systemPath> -->
+        </dependency>     
+        <!-- Dependency for PDF Generation -->
         <dependency>
-			<groupId>com.itextpdf.text</groupId>
-			<artifactId>itext-xtra</artifactId>
-			<version>5.2.1</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/PDF_LIB/itext-xtra-5.2.1.jar</systemPath>
-		</dependency>		
+            <groupId>com.itextpdf.text</groupId>
+            <artifactId>itext-xtra</artifactId>
+            <version>5.2.1</version>
+          <!--     <scope>system</scope>
+            <systemPath>${project.basedir}/lib/PDF_LIB/itext-xtra-5.2.1.jar</systemPath> -->
+        </dependency>       
         <dependency>
-			<groupId>fr.hd3d.html5.video</groupId>
-			<artifactId>video</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/fr.hd3d.html5.video.1.0.jar</systemPath>
-		</dependency>  
+            <groupId>fr.hd3d.html5.video</groupId>
+            <artifactId>video</artifactId>
+            <version>1.0</version>
+          <!--     <scope>system</scope>
+            <systemPath>${project.basedir}/lib/fr.hd3d.html5.video.1.0.jar</systemPath> -->
+        </dependency>  
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
