--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -9,7 +9,7 @@
     <properties>
         <jetty.app.path>${basedir}/target/OsceManager-0.1.0.BUILD-SNAPSHOT</jetty.app.path>
         <roo.version>1.1.5.RELEASE</roo.version>
-        <spring.version>3.0.5.RELEASE</spring.version>
+        <spring.version>3.1.0.RELEASE</spring.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.6.1</slf4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -450,11 +450,11 @@
             <classifier/>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.2</version>
-            <scope>compile</scope>
-        </dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.1</version>
+    </dependency>
+        
        <dependency>
             <groupId>com.google.gwt.inject</groupId>
             <artifactId>gin</artifactId>
@@ -665,10 +665,10 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/ApplicationScaffold.html</runTarget>
+                    <runTarget>/OsMaEntry.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.ApplicationScaffold</module>
+                        <module>${project.groupId}.OsMaEntry</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
