--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
     <context-param>
         <param-name>DMZ_HOST_ADDRESS</param-name>
-        <param-value>http://localhost:9090/sp_portal-0.1</param-value>
+        <param-value>http://192.168.2.40:8090</param-value>
     </context-param>
     
     
