Minor fixes in IconButton, unibas.css, PdfUtil

--- a/OsceManager/.gitignore
+++ b/OsceManager/.gitignore
@@ -57,3 +57,4 @@
 /target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/web.xml
 /target/OsceManager-0.1.0.BUILD-SNAPSHOT/index.html
 
+OsceManager/log.roo
