Removed patients.sql from repo.

--- a/OsceManager/.gitignore
+++ b/OsceManager/.gitignore
@@ -61,3 +61,4 @@ OsceManager/log.roo
 bin/
 src/main/java/ch/unibas/medizin/osce/client/managed/
 src/main/java/ch/unibas/medizin/osce/domain/*.aj
+src/main/java/patients.sql
