--- a/OsceManager/.gitignore
+++ b/OsceManager/.gitignore
@@ -1,64 +1,9 @@
-/target
+.settings
 .classpath
 .project
-/log.roo
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/ApplicationScaffold.html
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/META-INF/MANIFEST.MF
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/OsMaEntry.html
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/antlr-2.7.6.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/aopalliance-1.0.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/appengine-api-1.0-sdk-1.5.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/aspectjrt-1.6.11.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/aspectjweaver-1.6.11.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/cglib-nodep-2.2.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-beanutils-1.8.0.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-codec-1.4.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-collections-3.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-dbcp-1.3.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-digester-2.0.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-fileupload-1.2.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/commons-pool-1.5.4.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/dom4j-1.6.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/flexjson-2.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/guice-3.0-rc2.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/guice-assistedinject-3.0-rc2.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/gwt-servlet-2.3.0.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/hibernate-commons-annotations-3.2.0.Final.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.0.Final.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/hibernate-validator-4.1.0.Final.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/javax.inject-1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/jcl-over-slf4j-1.6.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/joda-time-1.6.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/json-20090211.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/jstl-api-1.2.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/jstl-impl-1.2.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/jta-1.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/log4j-1.2.16.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/serializer-2.7.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/slf4j-api-1.6.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/slf4j-log4j12-1.6.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-aop-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-asm-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-aspects-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-beans-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-context-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-context-support-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-core-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-expression-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-jdbc-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-js-resources-2.2.1.RELEA
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-js-resources-2.2.1.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-orm-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-tx-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-web-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/spring-webmvc-3.0.5.RELEASE.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/lib/xalan-2.7.1.jar
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/spring/webmvc-config.xml
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/WEB-INF/web.xml
-/target/OsceManager-0.1.0.BUILD-SNAPSHOT/index.html
-
-OsceManager/log.roo
+log.roo
 bin/
+target/
 src/main/java/ch/unibas/medizin/osce/client/managed/
 src/main/java/ch/unibas/medizin/osce/domain/*.aj
 src/main/java/patients.sql
