--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -112,6 +112,14 @@
 	            <!-- <scope>system</scope>
    			 <systemPath>${project.basedir}/lib/gwt-dnd-3.1.1.jar</systemPath>-->
         </dependency> 
+        <!-- Dependency for CSV import -->
+        <dependency>
+        	<groupId>net.sourceforge.javacsv</groupId>
+        	<artifactId>javacsv</artifactId>
+        	<version>2.0</version>
+        	<!-- <scope>system</scope>
+        	<systemPath>${project.basedir}/lib/javacsv-2.0.jar</systemPath> -->
+        </dependency>
         <!-- Dependency for video upload -->
         <dependency>
 			<groupId>com.itextpdf</groupId>
