--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -17,6 +17,15 @@
     </properties>
     
     <repositories>
+    
+<!--     	FOR GWTRPC-SPRING -->
+    	<repository>
+      		<id>Octo Technology Nexus</id>
+      		<url>http://forge.octo.com/nexus/content/groups/public</url>
+   		</repository>
+   		
+<!--     	FOR GWTRPC-SPRING -->  
+    
         <repository>
             <id>spring-maven-release</id>
             <name>Spring Maven Release Repository</name>
@@ -99,6 +108,28 @@
             <artifactId>groovy-all</artifactId>
             <version>1.8.6</version>
         </dependency>
+    
+<!--     FOR GWTRPC-SPRING -->
+    	<dependency>
+        	<groupId>org.gwtrpcspring</groupId>
+            <artifactId>gwtrpc-spring</artifactId>
+            <version>1.01</version>
+        </dependency>
+<!--     FOR GWTRPC-SPRING -->
+
+<!-- 		FOR MAIL SENDING         -->
+        <dependency>
+      		<groupId>com.sun.mail</groupId>
+      		<artifactId>smtp</artifactId>
+      		<version>1.4.4</version>
+    	</dependency>
+    	
+    	<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+<!-- 		FOR MAIL SENDING         -->
     
     
        <!-- myOwn dependencies for standard applications -->
