Apply your smtp setting in smtp.properties file and add your default fromEmail address in OsMaConstant file, before you run

--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -1,4 +1,4 @@
-smtp.host=
-smtp.port=
-smtp.username=
-smtp.password=
+smtp.host=smtp.gmail.com
+smtp.port=587
+smtp.username=username
+smtp.password=password
