- Fixed pom.xml (repo for gwtrpc-spring was down, therefore lib is now included locally!) - Added patient & anamnesis data to import.xml

--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
     <context-param>
         <param-name>DMZ_HOST_ADDRESS</param-name>
-        <param-value>http://192.168.2.40:8090</param-value>
+	<param-value>http://lzm-svl-1.meddek.unibas.ch:8080</param-value>
     </context-param>
     
     
