--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -18,13 +18,14 @@
     
     <repositories>
     
-<!--     	FOR GWTRPC-SPRING -->
+<!--     	FOR GWTRPC-SPRING
+		REPO IS OFFLINE. GWTRPC-SPRING HAS TO BE MANUALLY ADDED 
     	<repository>
       		<id>Octo Technology Nexus</id>
       		<url>http://forge.octo.com/nexus/content/groups/public</url>
    		</repository>
    		
-<!--     	FOR GWTRPC-SPRING -->  
+    	FOR GWTRPC-SPRING -->  
     
         <repository>
             <id>spring-maven-release</id>
@@ -65,16 +66,17 @@
           <layout>default</layout>
       </repository>
       
+      <!-- <repository>
+      	<id>codehaus-groovy</id>
+      	<name>Corehaus Groovy</name>
+      	<url>http://repository.codehaus.org/</url>
+      </repository> -->
+      
         <repository>
           <id>gwt-i18n-repo</id>
           <url>https://service.teklabs.com/nexus/content/repositories/public-releases/</url>
           <name>Repo for gwt-18n-project</name>
         </repository>
-        
-        <repository>
-     		 <id>Octo Technology Nexus</id>
-   			 <url>http://forge.octo.com/nexus/content/groups/public</url>
- 		 </repository>
     </repositories>
     
     <pluginRepositories>
@@ -577,17 +579,6 @@
         	<type>jar</type>
         	<scope>test</scope>
         </dependency>
-         <dependency>
-   			<groupId>org.gwtrpcspring</groupId>
-   			<artifactId>gwtrpc-spring</artifactId>
-   			<version>1.01</version>
-		</dependency>
-
-   		 <dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>smtp</artifactId>
-			<version>1.4.5-rc1</version>
-		</dependency>
     </dependencies>
     <build>
          <plugins>
@@ -769,15 +760,18 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/ApplicationScaffold.html</runTarget>
+                    <runTarget>/OsMaEntry.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.ApplicationScaffold</module>
+                        <module>${project.groupId}.OsMaEntry</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
                 <executions>
                     <execution>
+                    	<configuration>
+                  			<extraJvmArgs>-Xmx12G</extraJvmArgs>
+                    	</configuration>
                         <id>gwtcompile</id>
                         <phase>prepare-package</phase>
                         <goals>
