- Updated pom.xml to deploy OsceConstants*.properties to classpath - Fixed invisible "manage osces" link in navigation - removed client side logger from PdfUtil . reordered ScarRequestNonRoo.sql - removed references to database name from import.sql

--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -596,6 +596,16 @@
         </dependency>
     </dependencies>
     <build>
+    	<!--  for server side i18n -->
+    	<resources>
+    		<resource>
+    			<directory>src/main/java/ch/unibas/medizin/osce/shared/i18n</directory>
+    			<targetPath>ch/unibas/medizin/osce/shared/i18n</targetPath>
+    			<includes>
+    				<include>*.properties</include>
+    			</includes>
+    		</resource>
+    	</resources>
          <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
