--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -105,11 +105,11 @@
     </pluginRepositories>
     
     <dependencies>
-        <dependency>
+      <!--   <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>1.8.6</version>
-        </dependency>
+        </dependency>-->
     
 <!--     FOR GWTRPC-SPRING -->
     	<dependency>
