- Added new translations - Fixed display of some older translations (SemesterPopupView) - added test .aj files to gitignore

--- a/OsceManager/.gitignore
+++ b/OsceManager/.gitignore
@@ -62,3 +62,4 @@ bin/
 src/main/java/ch/unibas/medizin/osce/client/managed/
 src/main/java/ch/unibas/medizin/osce/domain/*.aj
 src/main/java/patients.sql
+src/test/java/ch/unibas/medizin/osce/domain/*.aj
