--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
     <context-param>
         <param-name>DMZ_HOST_ADDRESS</param-name>
-	<param-value>http://localhost:8080</param-value>
+	<param-value>http://sp.medizin.unibas.ch/sp_portal_test</param-value>
     </context-param>
     
     
