Module 16: export csv data in post analysis

--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -336,5 +336,14 @@
 		<servlet-name>exportAssignment</servlet-name>
 		<url-pattern>/exportAssignment</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>exportStatisticData</servlet-name>
+        <servlet-class>ch.unibas.medizin.osce.server.upload.ExportStatisticData</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>exportStatisticData</servlet-name>
+		<url-pattern>/exportStatisticData</url-pattern>
+	</servlet-mapping>
  
 </web-app>
